// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display renders display which have no items 1`] = `
<RCTScrollView
  data={Array []}
  disableVirtualization={false}
  extraData={0}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={2}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginTop": 16,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View />
</RCTScrollView>
`;

exports[`Display renders display which have some items 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "actions": Object {
          "sellAndCount": [Function],
        },
        "id": 0,
        "imageUrl": "https://example.com/assets/images/coffee.png",
        "isSoldOut": false,
        "isTooFewChargedMoney": true,
        "price": 120,
      },
      Object {
        "actions": Object {
          "sellAndCount": [Function],
        },
        "id": 1,
        "imageUrl": "https://example.com/assets/images/water.png",
        "isSoldOut": true,
        "isTooFewChargedMoney": true,
        "price": 100,
      },
    ]
  }
  disableVirtualization={false}
  extraData={0}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={2}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginTop": 16,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 168,
                "justifyContent": "space-around",
                "margin": 16,
                "width": 168,
              },
              Object {
                "backgroundColor": "gray",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "uri": "https://example.com/assets/images/coffee.png",
              }
            }
            style={
              Object {
                "height": 96,
                "width": 96,
              }
            }
          />
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            ¥
            120
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 168,
                "justifyContent": "space-around",
                "margin": 16,
                "width": 168,
              },
              Object {
                "backgroundColor": "red",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "uri": "https://example.com/assets/images/water.png",
              }
            }
            style={
              Object {
                "height": 96,
                "width": 96,
              }
            }
          />
          <Text
            style={
              Object {
                "fontSize": 16,
              }
            }
          >
            ¥
            100
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
